--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ node_modules/
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
-node_modules/
+*/node_modules/
