--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -10,6 +10,7 @@
     "build:mud": "rimraf src/codegen && mud tablegen && mud worldgen",
     "deploy:local": "pnpm run build && mud deploy",
     "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
+    "deploy:fluent": "pnpm run build && mud deploy --profile=fluent-testnet",
     "dev": "pnpm mud dev-contracts",
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write 'src/**/*.sol'",
