--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -24,3 +24,6 @@ fs_permissions = [{ access = "read", path = "./"}]
 
 [profile.lattice-testnet]
 eth_rpc_url = "https://follower.testnet-chain.linfra.xyz"
+
+[profile.fluent-testnet]
+eth_rpc_url = "https://rpc.dev1.fluentlabs.xyz/"
