--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
     "@latticexyz/utils": "2.0.0-next.14",
     "@latticexyz/world": "2.0.0-next.14",
     "contracts": "workspace:*",
+    "dotenv": "^16.4.5",
     "rxjs": "7.5.5",
     "viem": "1.14.0"
   },
