--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "@latticexyz/store-sync": "2.0.0-next.14",
     "@latticexyz/utils": "2.0.0-next.14",
     "@latticexyz/world": "2.0.0-next.14",
+    "@metamask/sdk": "^0.18.1",
     "contracts": "workspace:*",
     "dotenv": "^16.4.5",
     "rxjs": "7.5.5",
