Start wallet integration (#50)
* bump solc version down to 20 for fluent test net

* Add a MUDChain to supportedChains for Fluent

* Add more world config to get Viem working with the deployed chains

* merge remote

* Try to fix the faucet CORS errors

* Amend env to use a metamask burner

* Add a metamask button and start to connect in a wallet

* Start MetaMask Wallet integration (#49)

* Update README.md

Signed-off-by: Rich Metson <rich@semaeopus.com>

* Update README.md

Signed-off-by: Rich Metson <rich@semaeopus.com>

* Update README.md

Signed-off-by: Rich Metson <rich@semaeopus.com>

* Update README.md

Signed-off-by: Rich Metson <rich@semaeopus.com>

* Update README.md

Signed-off-by: Rich Metson <rich@semaeopus.com>

---------

Signed-off-by: Rich Metson <rich@semaeopus.com>
Co-authored-by: Rich Metson <rich@semaeopus.com>

---------

Signed-off-by: Rich Metson <rich@semaeopus.com>
Co-authored-by: timS <lbdl_kb@protonmail.com>
Co-authored-by: Tim Storey <tstorey@gameaccount.com>
Co-authored-by: Rich Metson <rich@semaeopus.com>

--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -1,5 +1,5 @@
 [profile.default]
-solc = "0.8.21"
+solc = "0.8.20"
 ffi = false
 fuzz_runs = 256
 optimizer = true
@@ -24,3 +24,6 @@ fs_permissions = [{ access = "read", path = "./"}]
 
 [profile.lattice-testnet]
 eth_rpc_url = "https://follower.testnet-chain.linfra.xyz"
+
+[profile.fluent-testnet]
+eth_rpc_url = "https://rpc.dev1.fluentlabs.xyz/"
