--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "wait-port localhost:8545 && vite",
+    "dev-fluent": "vite --host",
     "preview": "vite preview",
     "test": "tsc --noEmit"
   },
@@ -19,7 +20,9 @@
     "@latticexyz/store-sync": "2.0.0-next.14",
     "@latticexyz/utils": "2.0.0-next.14",
     "@latticexyz/world": "2.0.0-next.14",
+    "@metamask/sdk": "^0.18.1",
     "contracts": "workspace:*",
+    "dotenv": "^16.4.5",
     "rxjs": "7.5.5",
     "viem": "1.14.0"
   },
