--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,6 +23,7 @@
     "@metamask/sdk": "^0.18.1",
     "contracts": "workspace:*",
     "dotenv": "^16.4.5",
+    "lit": "^3.1.2",
     "rxjs": "7.5.5",
     "viem": "1.14.0"
   },
