Add in a text input function and lit element

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -3,6 +3,7 @@
     "types": ["vite/client"],
     "target": "ESNext",
     "useDefineForClassFields": true,
+    "experimentalDecorators": false,
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
