Add console logs for tokens and add some casts for typescript

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "types": ["vite/client"],
+    "types": ["vite/client", "viem/_types/index"],
+    "strictNullChecks": false,
     "target": "ESNext",
     "useDefineForClassFields": true,
     "experimentalDecorators": false,
