Terminal fixed and QoL
- Removed pnpm version requirement
- Added prettierrc file to client side
- The terminal now automatically scrolls (smoothly) to the bottom of the page
- The > character can now no longer be deleted.
- Clicking anywhere inside the terminal will focus on the input box, like with most terminals.
- Added support to using the Up/Down arrow keys to switch to previously used commands. Also includes memory of the typed in command, so it's possible to go back to the originally typed input before ^ up was pressed.

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "typescript": "5.1.6"
   },
   "engines": {
-    "node": "18.x",
-    "pnpm": "8.x"
+    "node": "18.x"
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
