--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "foundry:up": "curl -L https://foundry.paradigm.xyz | bash && bash $HOME/.foundry/bin/foundryup",
     "mud:up": "pnpm mud set-version --tag main && pnpm install",
     "prepare": "(forge --version || pnpm foundry:up)",
-    "test": "pnpm recursive run test"
+    "test": "pnpm recursive run test",
+    "debug": "mprocs -c mprocs_dbg.yaml"
   },
   "devDependencies": {
     "@latticexyz/cli": "2.0.0-next.14",
